--- a/modules/mod_admin/templates/mediaclass.config
+++ b/modules/mod_admin/templates/mediaclass.config
@@ -20,14 +20,14 @@
     ]},
     
     {"admin-rsc-edge-media", [
-        {width, 190},
-        {height, 190},
-        extent
+        {width, 180},
+        {height, 180},
+        {quality, 75}
     ]},
     
     {"admin-media", [
-        {width, 597},
-        {height, 597},
+        {width, 600},
+        {height, 600},
         {quality, 75}
     ]},
     {"admin-media-cropcenter", [
