build: Add 0.11 and 0.12 release branches to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ script: make all edocs && bin/zotonic runtests
 branches:
   only:
     - master
+    - release-0.12.x
+    - release-0.11.x
     - release-0.10.x
 notifications:
   email:
