--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ otp_release:
   - 17.0  # experimental
   - R16B
   - R15B03
+install: echo "hi" # stub command; otherwise travis runs 'rebar get-deps'
 script: make all edocs && bin/zotonic runtests
 branches:
   only:
