--- a/rebar.config
+++ b/rebar.config
@@ -38,7 +38,7 @@
   {erlware_commons,  ".*", {git, "git://github.com/erlware/erlware_commons.git", {branch, "master"}}},
   {erlang_localtime, ".*", {git, "git://github.com/choptastic/erlang_localtime.git", {branch, master}}},
   {recon, ".*", {git, "git://github.com/ferd/recon.git", {branch, "2.x"}}},
-  {twerl, ".*", {git, "git://github.com/mworrell/twerl.git", {branch, "refactoring"}}}
+  {twerl, ".*", {git, "https://github.com/mworrell/twerl.git", {branch, "refactoring"}}}
  ]
 }.
 
