mod_content_groups: new module to categorize content into groups for the access control.
Added to mod_menu: hierarchical sorter and hierarchies for content in a category.

--- a/rebar.config
+++ b/rebar.config
@@ -28,6 +28,7 @@
   {sendfile, ".*", {git, "git://github.com/tuncer/sendfile.git", {branch, "master"}}},
   {filezcache, ".*", {git, "git://github.com/mworrell/filezcache.git", {branch, "master"}}},
   {s3filez, ".*", {git, "git://github.com/mworrell/s3filez.git", {branch, "master"}}},
+  {diffy, ".*", {git, "https://github.com/mmzeeman/diffy.git", {branch, "master"}}},
   {goldrush, ".*", {git, "git://github.com/DeadZen/goldrush.git", {tag, "0.1.6"}}},
   {jobs, ".*", {git, "git://github.com/esl/jobs.git", {branch, "master"}}},
   {gproc, ".*", {git, "git://github.com/uwiger/gproc.git", {branch, "master"}}},
