--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 %% -*- mode: erlang -*-
 
-{require_min_otp_vsn, "R15B03"}.
+{require_min_otp_vsn, "R16"}.
 
 {erl_opts, [
   {parse_transform, lager_transform},
