--- a/priv/zotonic.config.in
+++ b/priv/zotonic.config.in
@@ -89,6 +89,12 @@
    %% {smtp_spamd_ip, {127,0,0,1}},
    %% {smtp_spamd_port, 783},
 
+%%% SMTP DNSBL Realtime DNS Block Lists
+%%% These services are checked for DNSBL listings upon receiving email, set to an
+%%% empty list to disable the DNSBL checks. The default list is defined in
+%%% deps/z_stdlib/src/z_email_dnsbl.erl
+   %% {smtp_dnsbl, ["zen.spamhaus.org", "dnsbl.sorbs.net"]},
+
 %%% Password for the sites administration site (zotonic_status). Will
 %%% be generated on first Zotonic startup, if the config file does not yet exist.
    {password, "%%GENERATED%%"}
