core: use 'rebar' to compile zotonic from the command line. Move .yrl output to default location for rebar. > Use skip_deps for 'make compile-zotonic'. Add 'make refresh-deps' and 'make list-deps'. Fixes #978
(cherry picked from commit 07338767c6d7faa7394201a6cd5dc2b418d4714e)

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ rebar
 ebin/
 deps/
 
-/src/erlydtl/erlydtl_parser.erl
+/src/erlydtl_parser.erl
 /src/tests/erlydtl/rendered_output/
 
 /priv/*.config
