--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ notifications:
   email:
     recipients:
       - zotonic-commits@googlegroups.com
+      - marc@worrell.nl
     on_success: change #[always|never|change] # default: change
     on_failure: always #[always|never|change] # default: always
   irc:
