--- a/rebar.config
+++ b/rebar.config
@@ -28,12 +28,13 @@
   {sendfile, ".*", {git, "git://github.com/tuncer/sendfile.git", {branch, "master"}}},
   {filezcache, ".*", {git, "git://github.com/mworrell/filezcache.git", {branch, "master"}}},
   {s3filez, ".*", {git, "git://github.com/mworrell/s3filez.git", {branch, "master"}}},
+  {proper, ".*", {git, "git://github.com/manopapad/proper.git", {branch, "master"}}},
   {diffy, ".*", {git, "https://github.com/mmzeeman/diffy.git", {branch, "master"}}},
   {goldrush, ".*", {git, "git://github.com/DeadZen/goldrush.git", {tag, "0.1.6"}}},
   {jobs, ".*", {git, "git://github.com/esl/jobs.git", {branch, "master"}}},
   {gproc, ".*", {git, "git://github.com/uwiger/gproc.git", {branch, "master"}}},
   {emqtt, ".*", {git, "git://github.com/zotonic/emqtt.git", {branch, "zotonic"}}},
-  {poolboy,   ".*",   {git, "git://github.com/devinus/poolboy.git", "9c4b4580b0363cce91693ec6a7f1f03005955023"}},
+  {poolboy,   ".*",   {git, "git://github.com/devinus/poolboy.git", "1.5.1"}},
   {epgsql,   ".*",   {git, "git://github.com/epgsql/epgsql.git", {tag, "2.0.0"}}},
   {qdate, ".*", {git, "git://github.com/mworrell/qdate.git", {branch, "zotonic"}}},
   {erlware_commons,  ".*", {git, "git://github.com/erlware/erlware_commons.git", {branch, "master"}}},
