--- a/rebar.config
+++ b/rebar.config
@@ -34,7 +34,7 @@
   {jobs, ".*", {git, "git://github.com/esl/jobs.git", {branch, "master"}}},
   {gproc, ".*", {git, "git://github.com/uwiger/gproc.git", {branch, "master"}}},
   {emqtt, ".*", {git, "git://github.com/zotonic/emqtt.git", {branch, "zotonic"}}},
-  {poolboy,   ".*",   {git, "git://github.com/devinus/poolboy.git", "1.5.1"}},
+  {poolboy,   ".*",   {git, "git://github.com/devinus/poolboy.git", {tag, "1.5.1"}}},
   {epgsql,   ".*",   {git, "git://github.com/epgsql/epgsql.git", {tag, "2.0.0"}}},
   {qdate, ".*", {git, "git://github.com/mworrell/qdate.git", {branch, "zotonic"}}},
   {erlware_commons,  ".*", {git, "git://github.com/erlware/erlware_commons.git", {branch, "master"}}},
