mod_admin: improve layout of navigation bars

--- a/modules/mod_admin/lib/admin-bootstrap3/config.json
+++ b/modules/mod_admin/lib/admin-bootstrap3/config.json
@@ -6,7 +6,7 @@
     "@gray": "lighten(@gray-base, 33.5%)",
     "@gray-light": "lighten(@gray-base, 46.7%)",
     "@gray-lighter": "lighten(@gray-base, 93.5%)",
-    "@brand-primary": "#069cd1",
+    "@brand-primary": "#0fa2db",
     "@brand-success": "#5cb85c",
     "@brand-info": "#5bc0de",
     "@brand-warning": "#f0ad4e",
@@ -140,19 +140,19 @@
     "@container-md": "@container-desktop",
     "@container-large-desktop": "(1140px + @grid-gutter-width)",
     "@container-lg": "@container-large-desktop",
-    "@navbar-height": "44px",
+    "@navbar-height": "50px",
     "@navbar-margin-bottom": "@line-height-computed",
     "@navbar-border-radius": "@border-radius-base",
     "@navbar-padding-horizontal": "floor((@grid-gutter-width / 2))",
     "@navbar-padding-vertical": "((@navbar-height - @line-height-computed) / 2)",
     "@navbar-collapse-max-height": "340px",
-    "@navbar-default-color": "#fff",
-    "@navbar-default-bg": "@brand-primary",
+    "@navbar-default-color": "#777",
+    "@navbar-default-bg": "#f8f8f8",
     "@navbar-default-border": "darken(@navbar-default-bg, 6.5%)",
-    "@navbar-default-link-color": "#fff",
-    "@navbar-default-link-hover-color": "#fff",
+    "@navbar-default-link-color": "#777",
+    "@navbar-default-link-hover-color": "#333",
     "@navbar-default-link-hover-bg": "transparent",
-    "@navbar-default-link-active-color": "#fff",
+    "@navbar-default-link-active-color": "#555",
     "@navbar-default-link-active-bg": "darken(@navbar-default-bg, 6.5%)",
     "@navbar-default-link-disabled-color": "#ccc",
     "@navbar-default-link-disabled-bg": "transparent",
@@ -430,5 +430,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=29dfeb7556c72384096f"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=738b62317e406a32535a"
 }
