mod_admin: override style for code

--- a/modules/mod_admin/lib/admin-bootstrap3/config.json
+++ b/modules/mod_admin/lib/admin-bootstrap3/config.json
@@ -6,7 +6,7 @@
     "@gray": "lighten(@gray-base, 33.5%)",
     "@gray-light": "lighten(@gray-base, 46.7%)",
     "@gray-lighter": "lighten(@gray-base, 93.5%)",
-    "@brand-primary": "#0fa2db",
+    "@brand-primary": "#069cd1",
     "@brand-success": "#5cb85c",
     "@brand-info": "#5bc0de",
     "@brand-warning": "#f0ad4e",
@@ -61,7 +61,7 @@
     "@table-bg-accent": "#f9f9f9",
     "@table-bg-hover": "#f5f5f5",
     "@table-bg-active": "@table-bg-hover",
-    "@table-border-color": "#ddd",
+    "@table-border-color": "rgba(217, 217, 217, 0.6)",
     "@btn-font-weight": "normal",
     "@btn-default-color": "#333",
     "@btn-default-bg": "#fff",
@@ -140,19 +140,19 @@
     "@container-md": "@container-desktop",
     "@container-large-desktop": "(1140px + @grid-gutter-width)",
     "@container-lg": "@container-large-desktop",
-    "@navbar-height": "50px",
+    "@navbar-height": "44px",
     "@navbar-margin-bottom": "@line-height-computed",
     "@navbar-border-radius": "@border-radius-base",
     "@navbar-padding-horizontal": "floor((@grid-gutter-width / 2))",
     "@navbar-padding-vertical": "((@navbar-height - @line-height-computed) / 2)",
     "@navbar-collapse-max-height": "340px",
-    "@navbar-default-color": "#777",
-    "@navbar-default-bg": "#f8f8f8",
+    "@navbar-default-color": "#fff",
+    "@navbar-default-bg": "@brand-primary",
     "@navbar-default-border": "darken(@navbar-default-bg, 6.5%)",
-    "@navbar-default-link-color": "#777",
-    "@navbar-default-link-hover-color": "#333",
+    "@navbar-default-link-color": "#fff",
+    "@navbar-default-link-hover-color": "#fff",
     "@navbar-default-link-hover-bg": "transparent",
-    "@navbar-default-link-active-color": "#555",
+    "@navbar-default-link-active-color": "#fff",
     "@navbar-default-link-active-bg": "darken(@navbar-default-bg, 6.5%)",
     "@navbar-default-link-disabled-color": "#ccc",
     "@navbar-default-link-disabled-bg": "transparent",
@@ -361,8 +361,8 @@
     "@close-font-weight": "bold",
     "@close-color": "#000",
     "@close-text-shadow": "0 1px 0 #fff",
-    "@code-color": "#c7254e",
-    "@code-bg": "#f9f2f4",
+    "@code-color": "@gray-dark",
+    "@code-bg": "transparent",
     "@kbd-color": "#fff",
     "@kbd-bg": "#333",
     "@pre-bg": "#f5f5f5",
@@ -430,5 +430,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=738b62317e406a32535a"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=f311996bc44bff3c921f"
 }
