--- a/modules/mod_admin/lib/admin-bootstrap3/config.json
+++ b/modules/mod_admin/lib/admin-bootstrap3/config.json
@@ -305,7 +305,7 @@
     "@list-group-link-heading-color": "#333",
     "@panel-bg": "#fff",
     "@panel-body-padding": "15px",
-    "@panel-heading-padding": "10px 15px",
+    "@panel-heading-padding": "15px",
     "@panel-footer-padding": "@panel-heading-padding",
     "@panel-border-radius": "@border-radius-base",
     "@panel-inner-border": "#ddd",
@@ -430,5 +430,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=c90572b23d422f034150"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=0bc6eed74a71356865be"
 }
