--- a/modules/mod_admin/lib/admin-bootstrap3/config.json
+++ b/modules/mod_admin/lib/admin-bootstrap3/config.json
@@ -220,9 +220,9 @@
     "@state-success-text": "#3c763d",
     "@state-success-bg": "#dff0d8",
     "@state-success-border": "darken(spin(@state-success-bg, -10), 5%)",
-    "@state-info-text": "#31708f",
-    "@state-info-bg": "#d9edf7",
-    "@state-info-border": "darken(spin(@state-info-bg, -10), 7%)",
+    "@state-info-text": "#555",
+    "@state-info-bg": "#a6daf0",
+    "@state-info-border": "darken(@state-info-bg, 2%)",
     "@state-warning-text": "#8a6d3b",
     "@state-warning-bg": "#fcf8e3",
     "@state-warning-border": "darken(spin(@state-warning-bg, -10), 5%)",
@@ -430,5 +430,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=0bc6eed74a71356865be"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=1a7d23e697bd9ff5e808"
 }
