core: move the dispatch compiler to its own repository. Fixes #1072

--- a/rebar.config
+++ b/rebar.config
@@ -20,6 +20,7 @@
   {mimetypes, ".*", {git, "git://github.com/zotonic/mimetypes.git", {branch, "master"}}},
   {mochiweb, ".*", {git, "git://github.com/zotonic/mochiweb.git", {branch, "master"}}},
   {ua_classifier, ".*", {git, "git://github.com/zotonic/ua_classifier.git", {branch, "master"}}},
+  {dispatch_compiler, ".*", {git, "git://github.com/zotonic/dispatch_compiler.git", {branch, "master"}}},
   {webzmachine, ".*", {git, "git://github.com/zotonic/webzmachine.git", {branch, "master"}}},
   {z_stdlib, ".*", {git, "git://github.com/zotonic/z_stdlib.git", {branch, "master"}}},
   {parse_trans, ".*", {git, "git://github.com/uwiger/parse_trans.git", {branch, "master"}}},
