Tweak input border border to match buttons

--- a/modules/mod_admin/lib/admin-bootstrap3/config.json
+++ b/modules/mod_admin/lib/admin-bootstrap3/config.json
@@ -88,7 +88,7 @@
     "@input-bg": "#fff",
     "@input-bg-disabled": "@gray-lighter",
     "@input-color": "@gray",
-    "@input-border": "#ccc",
+    "@input-border": "#ddd",
     "@input-border-radius": "@border-radius-base",
     "@input-border-radius-large": "@border-radius-large",
     "@input-border-radius-small": "@border-radius-small",
@@ -430,5 +430,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=d33692b32c2f13344293"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=50268056ade18f16b413"
 }
